--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -1,8 +1,22 @@
+count: 10000
+tags: 20
+one_shot: true
+
 influx:
   url: http://localhost:8086
   database: test
   measurement: ms
   batch_size: 1000
   flush_delay: 50
-count: 10000
-tags: 20
+
+kafka:
+  hosts:
+    - 192.168.0.2:9092
+  topic: test
+  partitions: [0, 1, 2, 3]
+  batch_size: 100
+  flush_delay: 50
+
+gen:
+  start: "2017-04-06 10:00"
+  step: 400
