--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -14,9 +14,13 @@ kafka:
     - 192.168.0.2:9092
   topic: test
   partitions: [0, 1, 2, 3]
-  batch_size: 100
+  batch_size: 200
   flush_delay: 50
+  serializer: msgp
 
 gen:
   start: "2017-04-06 10:00"
   step: 400
+
+httpserver:
+  addr: "localhost:8787"
