--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -1,30 +1,34 @@
-count: 10000
-tags: 20
-one_shot: true
-
 influx:
   url: http://localhost:8086
   database: test
   measurement: ms
   batch_size: 1000
   flush_delay: 50
-
 kafka:
   hosts:
-    - 192.168.0.2:9092
+  - localhost:9092
   topic: test
-  partitions: [0, 1, 2, 3]
+  num_partitions: 4
+  partitions:
+  - 0
   batch_size: 200
   flush_delay: 50
   serializer: msgp
-
 gen:
-  start: "2017-04-07 00:00"
-  end: "2017-04-08 00:00"
-  count: 1000000
-
-httpserver:
-  addr: "localhost:8787"
-
+  mode: ""
+  start: 2017-04-07 00:00
+  end: 2017-04-08 00:00
+  count: 10000000
+  tags: 20
+reportingserver:
+  addr: localhost:8788
+receptorserver:
+  addr: localhost:8787
+client:
+  batch_size: 10
 leveldb:
-  path: "/home/dan/data/leveldb"
+  path: /home/dan/data/leveldb
+  batchsize: 1000
+  flushdelay: 50
+one_shot: false
+
