--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -2,8 +2,6 @@ influx:
   url: http://localhost:8086
   database: test
   measurement: ms
-  batch_size: 1000
-  flush_delay: 50
 kafka:
   hosts:
   - localhost:9092
@@ -11,24 +9,19 @@ kafka:
   num_partitions: 4
   partitions:
   - 0
-  batch_size: 200
-  flush_delay: 50
   serializer: msgp
 gen:
-  mode: "seq"
+  mode: "geom"
   start: 2017-04-10 00:00
   end: 2017-04-11 00:00
   count: 10000000
   tags: 20
-reportingserver:
+server:
   addr: localhost:8787
-receptorserver:
-  addr: localhost:8787
+  backend: leveldb
 client:
   batch_size: 10
 leveldb:
   path: /home/dan/data/leveldb
-  batchsize: 1000
-  flushdelay: 50
 one_shot: false
 
