--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -12,9 +12,9 @@ kafka:
   serializer: msgp
 gen:
   mode: "geom"
-  start: 2017-04-10 00:00
-  end: 2017-04-11 00:00
-  count: 10000000
+  start: 2017-04-11 00:00
+  end: 2017-04-12 00:00
+  count: 1000000000
   tags: 20
 server:
   addr: localhost:8787
@@ -22,6 +22,6 @@ server:
 client:
   batch_size: 10
 leveldb:
-  path: /home/dan/data/leveldb
+  path: /mnt/data/dan/leveldb
 one_shot: false
 
