--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -12,8 +12,8 @@ kafka:
   serializer: msgp
 gen:
   mode: "geom"
-  start: 2017-04-23 00:00
-  end: 2017-04-24 00:00
+  start: 2017-04-25 00:00
+  end: 2017-04-26 00:00
   count: 10000000
   tags: 20
 server:
@@ -24,5 +24,6 @@ client:
 leveldb:
   path: /home/dan/data/leveldb
   ttl: 24h
+  compact_before: 2017-04-25 00:00
 one_shot: false
 
