--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -14,8 +14,8 @@ gen:
   mode: "geom"
   start: 2017-04-10 00:00
   end: 2017-04-16 00:00
-  count: 50000000
-  tags: 20
+  count: 100000000
+  tags: 2000
 server:
   addr: localhost:8787
   backend: leveldb
@@ -24,5 +24,7 @@ client:
 leveldb:
   path: /home/dan/data/leveldb
   compact_before: 2017-04-13 12:00
+batch:
+  batch_size: 2000
 one_shot: false
 
