--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -13,8 +13,8 @@ kafka:
 gen:
   mode: "geom"
   start: 2017-04-10 00:00
-  end: 2017-04-16 00:00
-  count: 100000000
+  end: 2017-04-15 00:00
+  count: 50000000
   tags: 2000
 server:
   addr: localhost:8787
@@ -22,9 +22,9 @@ server:
 client:
   batch_size: 10
 leveldb:
-  path: /home/dan/data/leveldb
+  path: /tmp/leveldb
   compact_before: 2017-04-13 12:00
 batch:
-  batch_size: 2000
+  batch_size: 1000
 one_shot: false
 
