--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -14,11 +14,11 @@ gen:
   mode: "geom"
   start: 2017-04-10 00:00
   end: 2017-04-16 00:00
-  count: 100000000
+  count: 20000000
   tags: 2000
 server:
   addr: localhost:8787
-  backend: leveldb
+  backend: file
 client:
   batch_size: 10
 leveldb:
@@ -27,4 +27,5 @@ leveldb:
 batch:
   batch_size: 2000
 one_shot: false
+file_path: "/home/dan/data/generated.msgp"
 
