--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -10,13 +10,13 @@ kafka:
   partitions: [0, 1, 2, 3]
   serializer: msgp
   batch:
-    batch_size: 100
+    batch_size: 1000
     flush_delay: 50
 gen:
   mode: "geom"
-  start: 2017-04-10 00:00
-  end: 2017-04-11 00:00
-  count: 10000000
+  start: 2017-04-11 00:00
+  end: 2017-04-13 00:00
+  count: 40000000
   tags: 2000
   backend: leveldb
 #leveldb-standalone
@@ -26,6 +26,7 @@ server:
     leveldb: leveldb
   storage: leveldb
   reporter: leveldb
+  consume_partitions: [0, 1, 2, 3]
 # # leveldb-node
 # server:
 #   addr: localhost:8787
@@ -44,7 +45,7 @@ server:
 client:
   batch_size: 10
 leveldb:
-  path: /tmp/leveldb
+  path: /home/dan/data/leveldb
   num_partitions: 4
   partitions: [0, 1, 2, 3]
 batch:
