--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -9,7 +9,7 @@ kafka:
   hosts:
   - localhost:9092
   topic: test
-  num_partitions: 8
+  num_partitions: 4
   partitions: [0, 1, 2, 3]
   serializer: msgp
   batch:
@@ -19,14 +19,12 @@ gen:
   mode: "geom"
   start: 2017-04-11 00:00
   end: 2017-04-13 00:00
-  count: 40000000
+  count: 20000000
   tags: 2000
-  backend: leveldb
+  backend: kafka
 #leveldb-standalone
 server:
-  addr: localhost:8787
-  backends:
-    leveldb: leveldb
+  addr: 0.0.0.0:8787
   storage: leveldb
   reporter: leveldb
   consume_partitions: [0, 1, 2, 3]
@@ -48,7 +46,6 @@ server:
 client:
   batch_size: 10
 leveldb:
-  path: /home/dan/data/leveldb
   num_partitions: 4
   partitions: [0, 1, 2, 3]
 batch:
