--- a/cmd/pimco.yaml
+++ b/cmd/pimco.yaml
@@ -19,7 +19,7 @@ gen:
   mode: "geom"
   start: 2017-05-18 00:00
   end: 2017-05-19 00:00
-  count: 2000000
+  count: 20000000
   tags: 2000
   backend: kafka
 #leveldb-standalone
@@ -46,6 +46,7 @@ server:
 client:
   batch_size: 10
 leveldb:
+  # path: /mnt/leveldb
   num_partitions: 4
   partitions: [0, 1, 2, 3]
 one_shot: false
