--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,3 +84,14 @@ services:
     volumes:
       - /data/leveldb:/mnt/leveldb
     network_mode: host
+
+  dev:
+    container_name: dstor
+    image: dstor:latest
+    command: dstor standalone
+    ports:
+      - "8787:8787"
+    volumes:
+      - /data/leveldb:/mnt/leveldb
+      - /code/go/src/github.com/galtsev/dstor/dstor:/go/bin
+    network_mode: host
