--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,5 +90,5 @@ services:
     ports:
       - "8787:8787"
     volumes:
-      - /home/dan/go/src/github.com/galtsev/dstor/dstor:/go/bin
+      - /code/go/src/github.com/galtsev/dstor/dstor:/go/bin
     network_mode: host
